[package]
name = "hello_rust"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
jsonrpsee = { version = "0.24.7", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"

[[bin]]
name = "hello_rust"
path = "bin/hello_rust.rs"

[[bin]]
name = "jsonrpsee_http"
path = "bin/jsonrpsee/http.rs"
