[package]
name = "hello_rust"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
jsonrpsee = { version = "0.24.7", features = ["full"] }
prost = "0.13.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "hello_rust"
path = "bin/hello_rust.rs"

[[bin]]
name = "jsonrpsee_http"
path = "bin/jsonrpsee/http.rs"

[[bin]]
name = "tonic_server"
path = "bin/tonic/server.rs"

[[bin]]
name = "tonic_client"
path = "bin/tonic/client.rs"

[[bin]]
name = "tarpc_server"
path = "bin/tarpc/server.rs"

[[bin]]
name = "tarpc_client"
path = "bin/tarpc/client.rs"
