[package]
name = "hello_rust"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = "0.1.10"
jsonrpsee = { version = "0.24.7", features = ["full"] }
prost = "0.13.3"
rocket = { version = "0.5.1", features = ["http2", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "hello_rust"
path = "bin/hello_rust.rs"

[[bin]]
name = "jsonrpsee_http"
path = "bin/jsonrpsee/http.rs"

[[bin]]
name = "tonic_server"
path = "bin/tonic/server.rs"

[[bin]]
name = "tonic_client"
path = "bin/tonic/client.rs"

[[bin]]
name = "tarpc_server"
path = "bin/tarpc/server.rs"

[[bin]]
name = "tarpc_client"
path = "bin/tarpc/client.rs"

[[bin]]
name = "hyper_server"
path = "bin/hyper/server.rs"

[[bin]]
name = "actix_server"
path = "bin/actix-web/server.rs"

[[bin]]
name = "rocket_server"
path = "bin/rocket/server.rs"
